# minserve

./: .gitignore  README.md  justfile  pyproject.toml
app/: http_types.py  main.py
